<resources>
    <string name="app_name">Travel Journal</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="option_1">City break</string>
    <string name="option_2">Sea side</string>
    <string name="option_3">Mountains</string>
    <string name="price">Price(eur)</string>
    <string name="start_date">Start Date</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="rating">Rating</string>
    <string name="save">SAVE</string>
    <string name="end_date">End Date</string>
    <string name="add_a_new_trip">Add a new trip</string>
    <string name="memorable_journey_title">Memorable journey title</string>
    <string name="your_target_location">Your target location</string>
    <string name="error_empty_string">The field is empty.</string>
</resources>
