<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginBottom="@dimen/edit_text_bottom_margin"
            android:drawableLeft="@drawable/outline_terrain_black_18dp"
            android:hint="@string/memorable_journey_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_trip_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginBottom="@dimen/edit_text_bottom_margin"
            android:drawableLeft="@drawable/outline_place_black_18dp"
            android:hint="@string/your_target_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_trip_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginBottom="@dimen/edit_text_bottom_margin"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/option_1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_text_size" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/option_2"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_text_size" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/option_3"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_text_size" />
        </RadioGroup>

        <TextView
            android:id="@+id/price_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seek_bar_travel_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginBottom="@dimen/edit_text_bottom_margin"
            android:max="1000"
            android:progress="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/label_text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_date_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_text_margin_top"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                    android:gravity="start"
                    android:text="@string/date_hint"
                    android:onClick="addStartDateOnClick"
                    android:paddingTop="@dimen/button_top_padding"
                    android:tag="start"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/label_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/label_text_size"
                    android:textStyle="bold" />

                <Button
                    android:onClick="addEndDateOnClick"
                    android:id="@+id/button_date_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_text_margin_top"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                    android:gravity="start"
                    android:text="@string/date_hint"
                    android:paddingTop="@dimen/button_top_padding"
                    android:tag="end"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/label_text_size" />

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rating_bar_trip_stars"
            android:layout_width="@dimen/rating_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginBottom="@dimen/edit_text_bottom_margin" />

        <Button
            android:id="@+id/button_save_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:hint="@dimen/label_text_size"
            android:onClick="submitTripDataOnClick"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>